objects/Product_Process__c.object
<CustomObject><fields>
        <fullName>Actual_Time_minutes__c</fullName>
        <label>Actual Time (minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Calculated_Cost_Setup__c</fullName>
        <formula>IF (CONTAINS(Process__r.Name,"SETUP"), (Actual_Time_minutes__c * Process__r.Cost__c/60/Product_Configuration__r.Order_Qty__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Cost If Setup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Cost_Per_UOM__c</fullName>
        <label>Cost Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>EACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Cost_Per__c</fullName>
        <label>Cost Per</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cost__c</fullName>
        <formula>IF( AND(CONTAINS(Process__r.Name,'BMD'), ISPICKVAL( Process__r.Process_Family__c, 'Mould') ),  Process__r.Rate1__c/Product_Configuration__r.No_Per_Box__c,   
	IF (CONTAINS(Process__r.Name,"SETUP"), (Actual_Time_minutes__c * Process__r.Cost__c/60/Product_Configuration__r.Order_Qty__c),(Actual_Time_minutes__c *  Process__r.Cost__c)/60)
)</formula>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Process_Index__c</fullName>
        <label>Process Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Process_Notes__c</fullName>
        <label>Process Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Product Processes</relationshipLabel>
        <relationshipName>Product_Processes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Product_Configuration__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Processes</relationshipLabel>
        <relationshipName>Product_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Product_Index__c</fullName>
        <label>Product Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Synchro_Index__c</fullName>
        <externalId>true</externalId>
        <label>Synchro Index</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Time_Sec_Per_UOM__c</fullName>
        <label>Time Sec Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>MIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Time_Sec_Per__c</fullName>
        <label>Time Sec Per</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Time_Sec__c</fullName>
        <label>Time Sec</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Product Process</label><nameField>
        <label>Product Process Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Product Processes</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>